// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when there is data 1`] = `
<div>
  <div>
    Banana
    <div>
      SAVE
    </div>
  </div>
</div>
`;

exports[`when there is no data 1`] = `
<div>
  <div>
    Banana
  </div>
</div>
`;
